CMParser.java
/* CMParser.java */
/* Generated By:JavaCC: Do not edit this line. CMParser.java */
public class CMParser implements CMParserConstants {

  public static void main(String args[]) {
    CMParser parser;
    if (args.length == 0) {
      System.out.println("CM Parser:  Reading from standard input . . .");
      parser = new CMParser(System.in);
    } else if (args.length == 1) {
      System.out.println("CM Parser:  Reading from file " + args[0] + " . . .");
      try {
        parser = new CMParser(new java.io.FileInputStream(args[0]));
      } catch (java.io.FileNotFoundException e) {
        System.out.println("CM Parser :  File " + args[0] + " not found.");
        return;
      }
    } else {
      System.out.println("CM Parser 1.0.2:  Usage is one of:");
      System.out.println("         java CMParser< inputfile");
      System.out.println("OR");
      System.out.println("         java CMParser inputfile");
      return;
    }
    try {
      parser.program();
      System.out.println("CM Parser :  CMinus program parsed successfully.");
    } catch (ParseException e) {
      System.out.println("CM Parser :  Encountered errors during parse.");
      System.out.println(e);

    }
  }

/*****************************************
 * THE CM LANGUAGE GRAMMAR STARTS HERE *
 *****************************************/

/*
 * Program structuring syntax follows.
 */

//1. program -> declaration-list
  static final public void program() throws ParseException {
    trace_call("program");
    try {
      declarationlist();
    } finally {
      trace_return("program");
    }
  }

//2. declaration-list -> declaration-list declaration | declaration
  static final public void declarationlist() throws ParseException {
    trace_call("declarationlist");
    try {
      declaration();
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case INT:
        case VOID:{
          ;
          break;
          }
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        declaration();
      }
    } finally {
      trace_return("declarationlist");
    }
  }

//3. declaration -> var-declaration | fun-declaration
  static final public void declaration() throws ParseException {
    trace_call("declaration");
    try {
      if (jj_2_1(3)) {
        vardeclaration();
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case INT:
        case VOID:{
          fundeclaration();
          break;
          }
        default:
          jj_la1[1] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } finally {
      trace_return("declaration");
    }
  }

//4. var-declaration-> type-specifier <ID> ; | type-specifier <ID> [ <NUMBER> ] ;
  static final public void vardeclaration() throws ParseException {
    trace_call("vardeclaration");
    try {
      if (jj_2_2(3)) {
        typespecifier();
        jj_consume_token(ID);
        jj_consume_token(SEMICOLON);
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case INT:
        case VOID:{
          typespecifier();
          jj_consume_token(ID);
          jj_consume_token(LBRACKET);
          jj_consume_token(NUMBER);
          jj_consume_token(RBRACKET);
          jj_consume_token(SEMICOLON);
          break;
          }
        default:
          jj_la1[2] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } finally {
      trace_return("vardeclaration");
    }
  }

//5. type-specifier-> int | void
  static final public void typespecifier() throws ParseException {
    trace_call("typespecifier");
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:{
        jj_consume_token(INT);
        break;
        }
      case VOID:{
        jj_consume_token(VOID);
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("typespecifier");
    }
  }

//6. fun-declaration-> type-specifier ID ( params ) compound-stmt
  static final public void fundeclaration() throws ParseException {
    trace_call("fundeclaration");
    try {
      typespecifier();
      jj_consume_token(ID);
      jj_consume_token(LPAREN);
      params();
      jj_consume_token(RPAREN);
      compoundstmt();
    } finally {
      trace_return("fundeclaration");
    }
  }

//7. params-> param-list | VOID
  static final public void params() throws ParseException {
    trace_call("params");
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case VOID:{
        jj_consume_token(VOID);
        break;
        }
      case INT:{
        paramlist();
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("params");
    }
  }

//8. param-list-> param-list , param| param
  static final public void paramlist() throws ParseException {
    trace_call("paramlist");
    try {
      param();
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[5] = jj_gen;
          break label_2;
        }
        jj_consume_token(COMMA);
        param();
      }
    } finally {
      trace_return("paramlist");
    }
  }

//9. param-> type-specifier ID | type-specifier ID [ ]
  static final public void param() throws ParseException {
    trace_call("param");
    try {
      if (jj_2_3(3)) {
        typespecifier();
        jj_consume_token(ID);
        jj_consume_token(LBRACKET);
        jj_consume_token(RBRACKET);
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case INT:
        case VOID:{
          typespecifier();
          jj_consume_token(ID);
          break;
          }
        default:
          jj_la1[6] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } finally {
      trace_return("param");
    }
  }

//10. compound-stmt-> { local-declarations statement-list }
  static final public void compoundstmt() throws ParseException {
    trace_call("compoundstmt");
    try {
      jj_consume_token(LBRACE);
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IF:
        case INT:
        case RETURN:
        case VOID:
        case WHILE:
        case NUMBER:
        case ID:
        case LPAREN:
        case LBRACE:
        case SEMICOLON:{
          ;
          break;
          }
        default:
          jj_la1[7] = jj_gen;
          break label_3;
        }
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case INT:
        case VOID:{
          localdeclarations();
          break;
          }
        case IF:
        case RETURN:
        case WHILE:
        case NUMBER:
        case ID:
        case LPAREN:
        case LBRACE:
        case SEMICOLON:{
          statementlist();
          break;
          }
        default:
          jj_la1[8] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(RBRACE);
    } finally {
      trace_return("compoundstmt");
    }
  }

//11. local-declarations-> local-declarations var-declaration | empty
  static final public void localdeclarations() throws ParseException {
    trace_call("localdeclarations");
    try {
      vardeclaration();
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case INT:
        case VOID:{
          ;
          break;
          }
        default:
          jj_la1[9] = jj_gen;
          break label_4;
        }
        vardeclaration();
      }
    } finally {
      trace_return("localdeclarations");
    }
  }

//12. statement-list-> statement-list statement | empty
  static final public void statementlist() throws ParseException {
    trace_call("statementlist");
    try {
      statement();
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IF:
        case RETURN:
        case WHILE:
        case NUMBER:
        case ID:
        case LPAREN:
        case LBRACE:
        case SEMICOLON:{
          ;
          break;
          }
        default:
          jj_la1[10] = jj_gen;
          break label_5;
        }
        statement();
      }
    } finally {
      trace_return("statementlist");
    }
  }

//13. statement-> expression-stmt | compound-stmt | selection-stmt | iteration-stmt | return-stmt
  static final public void statement() throws ParseException {
    trace_call("statement");
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NUMBER:
      case ID:
      case LPAREN:
      case SEMICOLON:{
        expressionstmt();
        break;
        }
      case LBRACE:{
        compoundstmt();
        break;
        }
      case IF:{
        selectionstmt();
        break;
        }
      case WHILE:{
        iterationstmt();
        break;
        }
      case RETURN:{
        returnstmt();
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("statement");
    }
  }

//14. expression-stmt-> expression ; | ;
  static final public void expressionstmt() throws ParseException {
    trace_call("expressionstmt");
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NUMBER:
      case ID:
      case LPAREN:{
        expression();
        jj_consume_token(SEMICOLON);
        break;
        }
      case SEMICOLON:{
        jj_consume_token(SEMICOLON);
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("expressionstmt");
    }
  }

//15. selection-stmt-> if( expression ) statement | if( expression ) statement else
  static final public void selectionstmt() throws ParseException {
    trace_call("selectionstmt");
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IF:{
        jj_consume_token(IF);
        jj_consume_token(LPAREN);
        expression();
        jj_consume_token(RPAREN);
        statement();
        break;
        }{
        jj_consume_token(IF);
        jj_consume_token(LPAREN);
        expression();
        jj_consume_token(RPAREN);
        statement();
        jj_consume_token(ELSE);
        statement();
        break;
        }
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("selectionstmt");
    }
  }

//16. iteration-stmt-> while ( expression ) statement
  static final public void iterationstmt() throws ParseException {
    trace_call("iterationstmt");
    try {
      jj_consume_token(WHILE);
      jj_consume_token(LPAREN);
      expression();
      jj_consume_token(RPAREN);
      statement();
    } finally {
      trace_return("iterationstmt");
    }
  }

//17. return-stmt-> return ; | return expression ;
  static final public void returnstmt() throws ParseException {
    trace_call("returnstmt");
    try {
      jj_consume_token(RETURN);
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case NUMBER:
        case ID:
        case LPAREN:{
          ;
          break;
          }
        default:
          jj_la1[14] = jj_gen;
          break label_6;
        }
        expression();
      }
      jj_consume_token(SEMICOLON);
    } finally {
      trace_return("returnstmt");
    }
  }

//18. expression-> var = expression | simple-expression
  static final public void expression() throws ParseException {
    trace_call("expression");
    try {
      if (jj_2_4(5)) {
        var();
        jj_consume_token(ASSIGN);
        simpleexpression();
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case NUMBER:
        case ID:
        case LPAREN:{
          simpleexpression();
          break;
          }
        default:
          jj_la1[15] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } finally {
      trace_return("expression");
    }
  }

//19. var-> ID | ID [ expression ]
  static final public void var() throws ParseException {
    trace_call("var");
    try {
      if (jj_2_5(2)) {
        jj_consume_token(ID);
        jj_consume_token(LBRACKET);
        expression();
        jj_consume_token(RBRACKET);
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case ID:{
          jj_consume_token(ID);
          break;
          }
        default:
          jj_la1[16] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } finally {
      trace_return("var");
    }
  }

//20. simple-expression -> additive-expression relop additive-expression|additive-expression
  static final public void simpleexpression() throws ParseException {
    trace_call("simpleexpression");
    try {
      additiveexpression();
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case GT:
        case LT:
        case EQ:
        case LE:
        case GE:
        case NE:{
          ;
          break;
          }
        default:
          jj_la1[17] = jj_gen;
          break label_7;
        }
        relop();
        additiveexpression();
      }
    } finally {
      trace_return("simpleexpression");
    }
  }

//21. relop-> < | <= | > | >= | == | !=
  static final public void relop() throws ParseException {
    trace_call("relop");
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LT:{
        jj_consume_token(LT);
        break;
        }
      case LE:{
        jj_consume_token(LE);
        break;
        }
      case GT:{
        jj_consume_token(GT);
        break;
        }
      case GE:{
        jj_consume_token(GE);
        break;
        }
      case EQ:{
        jj_consume_token(EQ);
        break;
        }
      case NE:{
        jj_consume_token(NE);
        break;
        }
      default:
        jj_la1[18] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("relop");
    }
  }

//22. additive-expression-> additive-expression addop term | term
  static final public void additiveexpression() throws ParseException {
    trace_call("additiveexpression");
    try {
      term();
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case PLUS:
        case MINUS:{
          ;
          break;
          }
        default:
          jj_la1[19] = jj_gen;
          break label_8;
        }
        addop();
        term();
      }
    } finally {
      trace_return("additiveexpression");
    }
  }

//23. addop-> + | -
  static final public void addop() throws ParseException {
    trace_call("addop");
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:{
        jj_consume_token(PLUS);
        break;
        }
      case MINUS:{
        jj_consume_token(MINUS);
        break;
        }
      default:
        jj_la1[20] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("addop");
    }
  }

//24. term-> term mulop factor | factor
  static final public void term() throws ParseException {
    trace_call("term");
    try {
      factor();
      label_9:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case STAR:
        case SLASH:{
          ;
          break;
          }
        default:
          jj_la1[21] = jj_gen;
          break label_9;
        }
        mulop();
        factor();
      }
    } finally {
      trace_return("term");
    }
  }

//25. mulop-> * | /
  static final public void mulop() throws ParseException {
    trace_call("mulop");
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case STAR:{
        jj_consume_token(STAR);
        break;
        }
      case SLASH:{
        jj_consume_token(SLASH);
        break;
        }
      default:
        jj_la1[22] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("mulop");
    }
  }

//26. factor-> ( expression ) | var | call | NUM
  static final public void factor() throws ParseException {
    trace_call("factor");
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LPAREN:{
        jj_consume_token(LPAREN);
        expression();
        jj_consume_token(RPAREN);
        break;
        }
      case NUMBER:
      case ID:{
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case NUMBER:{
          jj_consume_token(NUMBER);
          break;
          }
        case ID:{
          if (jj_2_6(2)) {
            call();
          } else {
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case ID:{
              var();
              break;
              }
            default:
              jj_la1[23] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
          }
          break;
          }
        default:
          jj_la1[24] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
        }
      default:
        jj_la1[25] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("factor");
    }
  }

//27. call-> ID ( args )
  static final public void call() throws ParseException {
    trace_call("call");
    try {
      jj_consume_token(ID);
      jj_consume_token(LPAREN);
      args();
      jj_consume_token(RPAREN);
    } finally {
      trace_return("call");
    }
  }

//28. args-> arg-list | empty
  static final public void args() throws ParseException {
    trace_call("args");
    try {
      label_10:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case NUMBER:
        case ID:
        case LPAREN:{
          ;
          break;
          }
        default:
          jj_la1[26] = jj_gen;
          break label_10;
        }
        arglist();
      }
    } finally {
      trace_return("args");
    }
  }

//29. arg-list-> arg-list , expression | expression
  static final public void arglist() throws ParseException {
    trace_call("arglist");
    try {
      expression();
      label_11:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[27] = jj_gen;
          break label_11;
        }
        jj_consume_token(COMMA);
        expression();
      }
    } finally {
      trace_return("arglist");
    }
  }

  static private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_3R_24()
 {
    if (jj_3R_15()) return true;
    return false;
  }

  static private boolean jj_3R_35()
 {
    if (jj_3R_20()) return true;
    return false;
  }

  static private boolean jj_3R_18()
 {
    if (jj_3R_21()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_22()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3_1()
 {
    if (jj_3R_12()) return true;
    return false;
  }

  static private boolean jj_3R_34()
 {
    if (jj_3R_35()) return true;
    return false;
  }

  static private boolean jj_3R_33()
 {
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_34()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3_3()
 {
    if (jj_3R_13()) return true;
    if (jj_scan_token(ID)) return true;
    if (jj_scan_token(LBRACKET)) return true;
    return false;
  }

  static private boolean jj_3R_17()
 {
    if (jj_3R_13()) return true;
    if (jj_scan_token(ID)) return true;
    if (jj_scan_token(LBRACKET)) return true;
    return false;
  }

  static private boolean jj_3R_32()
 {
    if (jj_3R_14()) return true;
    return false;
  }

  static private boolean jj_3R_23()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(29)) {
    jj_scanpos = xsp;
    if (jj_scan_token(31)) {
    jj_scanpos = xsp;
    if (jj_scan_token(28)) {
    jj_scanpos = xsp;
    if (jj_scan_token(32)) {
    jj_scanpos = xsp;
    if (jj_scan_token(30)) {
    jj_scanpos = xsp;
    if (jj_scan_token(33)) return true;
    }
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3R_16()
 {
    if (jj_scan_token(ID)) return true;
    if (jj_scan_token(LPAREN)) return true;
    if (jj_3R_33()) return true;
    if (jj_scan_token(RPAREN)) return true;
    return false;
  }

  static private boolean jj_3R_15()
 {
    if (jj_3R_18()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_19()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3_6()
 {
    if (jj_3R_16()) return true;
    return false;
  }

  static private boolean jj_3R_28()
 {
    if (jj_scan_token(LPAREN)) return true;
    if (jj_3R_20()) return true;
    if (jj_scan_token(RPAREN)) return true;
    return false;
  }

  static private boolean jj_3R_25()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_28()) {
    jj_scanpos = xsp;
    if (jj_3R_29()) return true;
    }
    return false;
  }

  static private boolean jj_3R_31()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_6()) {
    jj_scanpos = xsp;
    if (jj_3R_32()) return true;
    }
    return false;
  }

  static private boolean jj_3R_26()
 {
    if (jj_3R_30()) return true;
    if (jj_3R_25()) return true;
    return false;
  }

  static private boolean jj_3_5()
 {
    if (jj_scan_token(ID)) return true;
    if (jj_scan_token(LBRACKET)) return true;
    if (jj_3R_20()) return true;
    if (jj_scan_token(RBRACKET)) return true;
    return false;
  }

  static private boolean jj_3R_14()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_5()) {
    jj_scanpos = xsp;
    if (jj_scan_token(15)) return true;
    }
    return false;
  }

  static private boolean jj_3R_30()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(36)) {
    jj_scanpos = xsp;
    if (jj_scan_token(37)) return true;
    }
    return false;
  }

  static private boolean jj_3R_13()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(9)) {
    jj_scanpos = xsp;
    if (jj_scan_token(11)) return true;
    }
    return false;
  }

  static private boolean jj_3_4()
 {
    if (jj_3R_14()) return true;
    if (jj_scan_token(ASSIGN)) return true;
    if (jj_3R_15()) return true;
    return false;
  }

  static private boolean jj_3R_20()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_4()) {
    jj_scanpos = xsp;
    if (jj_3R_24()) return true;
    }
    return false;
  }

  static private boolean jj_3R_21()
 {
    if (jj_3R_25()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_26()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3R_29()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(13)) {
    jj_scanpos = xsp;
    if (jj_3R_31()) return true;
    }
    return false;
  }

  static private boolean jj_3R_12()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_2()) {
    jj_scanpos = xsp;
    if (jj_3R_17()) return true;
    }
    return false;
  }

  static private boolean jj_3_2()
 {
    if (jj_3R_13()) return true;
    if (jj_scan_token(ID)) return true;
    if (jj_scan_token(SEMICOLON)) return true;
    return false;
  }

  static private boolean jj_3R_19()
 {
    if (jj_3R_23()) return true;
    if (jj_3R_18()) return true;
    return false;
  }

  static private boolean jj_3R_27()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(34)) {
    jj_scanpos = xsp;
    if (jj_scan_token(35)) return true;
    }
    return false;
  }

  static private boolean jj_3R_22()
 {
    if (jj_3R_27()) return true;
    if (jj_3R_21()) return true;
    return false;
  }
